--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.11.2"
+bevy_eventlistener = "0.5.0"
 gloo-console = "0.3.0"
 yew = { version = "0.20.0", features = ["csr"] }
+bevy_mod_picking = { version = "0.15.0", features = ["backend_raycast"] }
+bevy_egui = "0.21.0"
